# tritium_remote

./: .gitlab-ci.yml  Cargo.toml  LICENSE-APACHE  README.md
mock-tritium-gateway/: Cargo.toml  gateway_schema.json
mock-tritium-gateway/src/: main.rs
pure-py-tritium-remote/examples/: generic_query.py  generic_subscription.py
pure-py-tritium-remote/python/: README.rst  setup.cfg  setup.py
pure-py-tritium-remote/python/tritium_remote/: client.py  connect.py
py-tritium-remote/: Cargo.toml  build_and_install.sh  pyproject.toml
py-tritium-remote/python/: generic_mutation.py  generic_query.py  play_sequence.py  post_message.py  query_system_info.py  start_script.py  stop_script.py
py-tritium-remote/python/test_py_tritium_remote/: test.py
py-tritium-remote/src/: error.rs  lib.rs  tritium.rs
py-tritium-remote/src/tritium/: generic.rs  scripts.rs  sequences.rs  system.rs
tritium-remote/: Cargo.toml
tritium-remote/examples/: generic_mutation.rs  generic_query.rs  generic_subscription.rs  play_sequence.rs  post_message.rs  post_message_to_scripts.rs  start_script.rs  system_info.rs
tritium-remote/examples/hello_world/: Cargo.toml
tritium-remote/examples/hello_world/src/: main.rs
tritium-remote/examples/play_sequence/: Cargo.toml
tritium-remote/examples/play_sequence/src/: main.rs
tritium-remote/examples/start_script/: Cargo.toml
tritium-remote/examples/start_script/src/: main.rs
tritium-remote/examples/system_info/: Cargo.toml
tritium-remote/examples/system_info/src/: main.rs
tritium-remote/graphql/: README.md
tritium-remote/graphql/mutations/: manually_trigger_script.graphql  play_sequence.graphql
tritium-remote/graphql/queries/: basic_system_info.graphql
tritium-remote/graphql/schemas/: tritium.graphql
tritium-remote/src/: auth.rs  client.rs  error.rs  graphql.rs  lib.rs  protocol.rs  tritium.rs  websockets.rs
tritium-remote/src/graphql/: mod.rs  mutations.rs  operation.rs  subscription.rs
tritium-remote/src/graphql/mutations/: manually_trigger_script.rs  play_sequence.rs  post_message.rs
tritium-remote/src/graphql/queries/: basic_system_info.rs  mod.rs
tritium-remote/src/tritium/: generic.rs  scripts.rs  sequences.rs  session.rs  system.rs
tritium-remote/tests/: connection.rs
