[package]
name = "mock-tritium-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.17.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinytemplate = "1"
jsonschema = "*"
