[package]
name = "py-tritium-remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_tritium_remote"
crate-type = ["cdylib"]

[dependencies]
async-std = "1.12.0"
pyo3 = { version = "0.17.1", features = ["extension-module"] }
pyo3-asyncio = { version = "0.17.0", features = ["attributes", "tokio-runtime"] }

[package.metadata.maturin]
python-source = "python"
