[package]
name = "py-tritium-remote"
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tritium_remote"
crate-type = ["cdylib"]
test = false
doc = false

[dependencies]
tokio = "*"
pyo3 = { version = "0.17.1", features = ["extension-module", "multiple-pymethods"] }
pyo3-asyncio = { version = "0.17.0", features = ["attributes", "tokio-runtime"] }
tritium_remote = { path = "../tritium-remote" }

[package.metadata.maturin]
python-source = "python"
