[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "tritium-remote"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "A library for connecting to remote Robots running TritiumOS"
readme = "../README.md"

[project.urls]
homepage = "https://www.engineeredarts.co.uk/software/tritium/"
documentation = "https://tritiumrobot.cloud/docs/"
# repository = "https://github.com"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.license]
file = "../LICENSE-MIT"

[tool.maturin]
python-source = "python"
