[package]
name = "tritium_remote"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tungstenite = { version = "0.17" }
async-tungstenite = { version = "0.18", features=["tokio-runtime"] }
futures = "0.3"
futures-util = "0.3"
thiserror = "1.0"
graphql_client = "0.11"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"